# old_code

./: README.md
array2d/: main.cpp
array2d/.kdev4/: array2d.kdev4
toasts/: CMakeLists.txt  main.cpp  toasts.kdev4
toasts/.kdev4/: toasts.kdev4
toasts/processes/: butterer.cpp  butterer.h  butterer_p.h  container.cpp  container.h  controller.cpp  controller.h  controller_p.h  jammer.cpp  jammer.h  jammer_p.h  settings.h  toaster.cpp  toaster.h  toaster_p.h  worker.cpp  worker.h  worker_p.h
